GET /api/v1/subnets/{id}/ips for listing all ips in subnet
